# mini-edr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_smoke.py
docs/: interview-guide.md  usage.md
src/mini_edr/: __init__.py  cli.py  config.py  events.py  monitor.py  rules.py
tests/: test_monitor.py
